--- a/.gitignore
+++ b/.gitignore
@@ -178,7 +178,8 @@ cython_debug/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -503,6 +504,9 @@ pip-selfcheck.json
 # if you are NOT using Zero-installs, then:
 # comment the following lines
 !.yarn/cache
+
+# csv files
+*.csv
 
 # and uncomment the following lines
 # .pnp.*
